fixed dark mode comment

--- a/src/assets/styles/edititinerary.css
+++ b/src/assets/styles/edititinerary.css
@@ -1745,6 +1745,7 @@ button.btn {
   height: 40px;
   padding: 10px;
   border: 1px solid #ccc;
+  background-color: #fff;
   border-radius: 15px;
   font-size: 14px;
   margin-left: 15px;
